objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earthy</fullName>
                </value>
                <value>
                    <fullName>Fruit Forward</fullName>
                </value>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Vibrant</fullName>
                </value>
                <value>
                    <fullName>Aromatic</fullName>
                </value>
                <value>
                    <fullName>Rich</fullName>
                </value>
                <value>
                    <fullName>Lush</fullName>
                </value>
                <value>
                    <fullName>Full Bodied</fullName>
                </value>
                <value>
                    <fullName>Medium Bodied</fullName>
                </value>
                <value>
                    <fullName>Light Bodied</fullName>
                </value>
                <value>
                    <fullName>Pure</fullName>
                </value>
                <value>
                    <fullName>Chewy</fullName>
                </value>
                <value>
                    <fullName>Spicy</fullName>
                </value>
                <value>
                    <fullName>Structured</fullName>
                </value>
                <value>
                    <fullName>Smooth</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Powerful</fullName>
                </value>
                <value>
                    <fullName>Dense</fullName>
                </value>
                <value>
                    <fullName>Crisp</fullName>
                </value>
                <value>
                    <fullName>Intense</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Delicate</fullName>
                </value>
                <value>
                    <fullName>Elegant</fullName>
                </value>
                <value>
                    <fullName>Juicy</fullName>
                </value>
                <value>
                    <fullName>Lively</fullName>
                </value>
                <value>
                    <fullName>Layered</fullName>
                </value>
                <value>
                    <fullName>Tropical</fullName>
                </value>
                <value>
                    <fullName>Creamy</fullName>
                </value>
                <value>
                    <fullName>Sweet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>Sub Class in the SGWS taxonomy classification system.</description>
        <inlineHelpText>Sub Class in the SGWS taxonomy classification system.</inlineHelpText>
        <label>Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region_Code__c</fullName>
        <formula>Geography__r.Code_Sub_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>Geography__r.Sub_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_Level__c</fullName>
        <description>Residual Sugar of the product</description>
        <label>Sugar Level g/L</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Opening_Order__c</fullName>
        <label>Suggested Opening Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Retail_Price__c</fullName>
        <label>Suggested Retail Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Address_Book_Number__c</fullName>
        <formula>Supplier__r.Supplier__r.Supplier_Address_Book_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Address Book Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Currency__c</fullName>
        <formula>TEXT (Supplier__r.Supplier__r.Supplier_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier_Brand_Association__c</referenceTo>
        <relationshipName>Items_Active</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTB_COLA__c</fullName>
        <label>TTB COLA #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTB_DCOLA__c</fullName>
        <label>TTB DCOLA#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasting_Notes__c</fullName>
        <label>Tasting Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tetra_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tetra Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tray_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tray Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UoM_Component__c</fullName>
        <label>UoM Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Pricing__c</fullName>
        <label>UoM Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Purchasing__c</fullName>
        <label>UoM Purchasing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Secondary__c</fullName>
        <label>UoM Secondary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Shipping__c</fullName>
        <label>UoM Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_UPC__c</fullName>
        <label>UoM UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Volume__c</fullName>
        <label>UoM Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Weight__c</fullName>
        <label>UoM Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Varietal__c</fullName>
        <label>Varietal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vineyard_Domaine_Code__c</fullName>
        <formula>Geography__r.Code_Vineyard__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vineyard / Domaine Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vineyard_Domaine__c</fullName>
        <formula>Geography__r.Vineyard_Domaine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vineyard / Domaine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vintage__c</fullName>
        <label>Vintage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>218</fullName>
                    <label>2018</label>
                </value>
                <value>
                    <fullName>217</fullName>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>216</fullName>
                    <label>2016</label>
                </value>
                <value>
                    <fullName>215</fullName>
                    <label>2015</label>
                </value>
                <value>
                    <fullName>214</fullName>
                    <label>2014</label>
                </value>
                <value>
                    <fullName>213</fullName>
                    <label>2013</label>
                </value>
                <value>
                    <fullName>212</fullName>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>211</fullName>
                    <label>2011</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>2010</label>
                </value>
                <value>
                    <fullName>209</fullName>
                    <label>2009</label>
                </value>
                <value>
                    <fullName>208</fullName>
                    <label>2008</label>
                </value>
                <value>
                    <fullName>207</fullName>
                    <label>2007</label>
                </value>
                <value>
                    <fullName>206</fullName>
                    <label>2006</label>
                </value>
                <value>
                    <fullName>205</fullName>
                    <label>2005</label>
                </value>
                <value>
                    <fullName>204</fullName>
                    <label>2004</label>
                </value>
                <value>
                    <fullName>203</fullName>
                    <label>2003</label>
                </value>
                <value>
                    <fullName>202</fullName>
                    <label>2002</label>
                </value>
                <value>
                    <fullName>201</fullName>
                    <label>2001</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>2000</label>
                </value>
                <value>
                    <fullName>199</fullName>
                    <label>1999</label>
                </value>
                <value>
                    <fullName>198</fullName>
                    <label>1998</label>
                </value>
                <value>
                    <fullName>197</fullName>
                    <label>1997</label>
                </value>
                <value>
                    <fullName>196</fullName>
                    <label>1996</label>
                </value>
                <value>
                    <fullName>195</fullName>
                    <label>1995</label>
                </value>
                <value>
                    <fullName>194</fullName>
                    <label>1994</label>
                </value>
                <value>
                    <fullName>193</fullName>
                    <label>1993</label>
                </value>
                <value>
                    <fullName>192</fullName>
                    <label>1992</label>
                </value>
                <value>
                    <fullName>191</fullName>
                    <label>1991</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>1990</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_Upcharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Upcharge</label>
        <referenceTo>Warehouse_Upcharge__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Water_Zone_1_Base_Price__c</fullName>
        <label>Water Zone 1 Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Zone_1_Supplier_Price__c</fullName>
        <label>Water Zone 1 Supplier Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Zone_2_Base_Price__c</fullName>
        <label>Water Zone 2 Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Zone_2_Supplier_Price__c</fullName>
        <label>Water Zone 2 Supplier Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Zone_3_Base_Price__c</fullName>
        <label>Water Zone 3 Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Zone_3_Supplier_Price__c</fullName>
        <label>Water Zone 3 Supplier Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Winemaker_Notes__c</fullName>
        <label>Winemaker Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Winemaker__c</fullName>
        <description>Winemaker&apos;s name</description>
        <label>Winemaker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1_Freight_Warehouse__c</fullName>
        <label>X1 Freight - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Freight__c</fullName>
        <label>X1 - Freight  - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xnd_UPCoptional__c</fullName>
        <description>Optional UPC number</description>
        <inlineHelpText>Optional UPC number</inlineHelpText>
        <label>2nd UPC (optional)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ci_cc_F1_Total_Freight_Warehouse__c</fullName>
        <label>CI: F1 Total Freight - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_F1_Total_Freight__c</fullName>
        <description>Cost information / Cost Component: F1 Total Freight</description>
        <inlineHelpText>Cost information / Cost Component: F1 Total Freight</inlineHelpText>
        <label>CI: F1 Total Freight - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_H1_Total_Handling_Warehouse__c</fullName>
        <label>CI: H1 Total Handling - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_H1_Total_Handling__c</fullName>
        <label>CI: H1 Total Handling - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_I1_Total_Inland_Freight_WHSE__c</fullName>
        <label>CI: I1 Total Inland Freight - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_I1_Total_Inland_Freight__c</fullName>
        <description>Cost information / Cost Component: H1 Total Inland Freight</description>
        <inlineHelpText>Cost information / Cost Component: H1 Total Inland Freight</inlineHelpText>
        <label>CI: I1 Total Inland Freight - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Bio_Terror__c</fullName>
        <label>CI: K1 Bio Terror - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Bio_Terror_warehouse__c</fullName>
        <label>CI: K1 Bio Terror - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Duty_Warehouse__c</fullName>
        <label>CI: K1 Duty - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Duty__c</fullName>
        <label>CI: K1 Duty - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Excise_Tax__c</fullName>
        <label>CI: K1 Excise Tax - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Excise_Tax_warehouse__c</fullName>
        <label>CI: K1 Excise Tax - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_ISF__c</fullName>
        <label>CI: K1 ISF - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_ISF_warehouse__c</fullName>
        <label>CI: K1 ISF - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Processing__c</fullName>
        <label>CI: K1 Processing - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Processing_warehouse__c</fullName>
        <label>CI: K1 Processing - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Total_Customs_Warehouse__c</fullName>
        <label>CI: K1 Total Customs - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_K1_Total_Customs__c</fullName>
        <description>Cost information / Cost Component: K1 Total Customs</description>
        <inlineHelpText>Cost information / Cost Component: K1 Total Customs</inlineHelpText>
        <label>CI: K1 Total Customs - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_O1_Total_Other_Warehouse__c</fullName>
        <label>CI: O1 Total Other - Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cc_O1_Total_Other__c</fullName>
        <label>CI: O1 Total Other - CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_New_Supplier_Price_USD__c</fullName>
        <description>Cost information / CIF and Warehouse: New Supplier Price in USD</description>
        <inlineHelpText>Cost information / CIF and Warehouse: New Supplier Price in USD</inlineHelpText>
        <label>CIC: New Supplier Price USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_New_Total_Cost_CIF__c</fullName>
        <description>Cost information / CIF and Warehouse: New Total Cost of CIF</description>
        <label>CIC: New Total Cost CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_New_Total_Cost_Whse__c</fullName>
        <description>Cost information / CIF and Warehouse: New Total Cost of Warehouse</description>
        <label>CIC: New Total Cost Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_Old_Supplier_Price_USD__c</fullName>
        <description>Cost information / CIF and Warehouse: Old Supplier Price in USD</description>
        <formula>ci_cwc_New_Supplier_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost information / CIF and Warehouse: Old Supplier Price in USD</inlineHelpText>
        <label>CIC: Old Supplier Price USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_Old_Total_Cost_CIF__c</fullName>
        <description>Cost information / CIF and Warehouse: Old Total Cost of CIF</description>
        <formula>ci_cwc_New_Total_Cost_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost information / CIF and Warehouse: Old Total Cost of CIF</inlineHelpText>
        <label>CIC: Old Total Cost CIF</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_cwc_Old_Total_Cost_Whse__c</fullName>
        <description>Cost information / CIF and Warehouse: Old Total Cost of Warehouse</description>
        <formula>ci_cwc_New_Total_Cost_Whse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost information / CIF and Warehouse: Old Total Cost of Warehouse</inlineHelpText>
        <label>CIC: Old Total Cost Warehouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ci_sp_New_End_Date__c</fullName>
        <description>Cost information / Supplier: New End Date for price change</description>
        <inlineHelpText>Cost information / Supplier: New End Date for price change</inlineHelpText>
        <label>CIS: New  Supplier End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ci_sp_New_Start_Date__c</fullName>
        <description>Cost information / Supplier: New Supplier Price start date for price change</description>
        <inlineHelpText>Cost information / Supplier: New Supplier Price start date for price change</inlineHelpText>
        <label>CIS: New Supplier Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ci_sp_New_Supplier_Price__c</fullName>
        <description>Cost information / Supplier: New Supplier Price</description>
        <inlineHelpText>Cost information / Supplier: New Supplier Price</inlineHelpText>
        <label>CIS: New Supplier Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ci_sp_Old_End_Date__c</fullName>
        <description>Cost information / Supplier: Old Supplier Price end date for price change</description>
        <formula>ci_sp_New_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost information / Supplier: Old Supplier Price end date for price change</inlineHelpText>
        <label>CIS: Old Supplier End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ci_sp_Old_Start_Date__c</fullName>
        <description>Cost information / Supplier: Old Supplier Price start date for price change</description>
        <formula>ci_sp_New_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost information / Supplier: Old Supplier Price start date for price change</inlineHelpText>
        <label>CIS: Old Supplier Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ci_sp_Old_Supplier_Price__c</fullName>
        <description>Cost information / Supplier: Old Supplier Price</description>
        <inlineHelpText>Cost information / Supplier: Old Supplier Price</inlineHelpText>
        <label>CIS: Old Supplier Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ci_sp_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not needed - do not use</description>
        <inlineHelpText>Not needed - do not use</inlineHelpText>
        <label>ci_sp_Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pH_Level__c</fullName>
        <description>pH level of the product</description>
        <label>pH Level</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi_dp_New_Base_Price__c</fullName>
        <description>Price Information: Distributor New Base Price</description>
        <inlineHelpText>Price Information: Distributor New Base Price</inlineHelpText>
        <label>IA: Distributor New Base Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_dp_New_End_Date__c</fullName>
        <description>Price Information: Distributor Price New End Date</description>
        <inlineHelpText>Price Information: Distributor Price New End Date</inlineHelpText>
        <label>PID: New End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pi_dp_New_Start_Date__c</fullName>
        <description>Price Information: Distributor Price New Start Date</description>
        <inlineHelpText>Price Information: Distributor Price New Start Date</inlineHelpText>
        <label>PID: New Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pi_dp_Old_Base_Price__c</fullName>
        <description>Price Information: Distributor Old Base Price</description>
        <inlineHelpText>Price Information: Distributor Old Base Price</inlineHelpText>
        <label>IA: Distributor Old Base Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_dp_Old_End_Date__c</fullName>
        <description>Price Information: Distributor Price Old End Date</description>
        <formula>pi_dp_New_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Distributor Price Old End Date</inlineHelpText>
        <label>PID: Old End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pi_dp_Old_Start_Date__c</fullName>
        <description>Price Information: Distributor Price Old Start Date</description>
        <formula>pi_dp_New_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Distributor Price Old Start Date</inlineHelpText>
        <label>PID: Old Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pi_dp_Verification__c</fullName>
        <description>Do not use this field</description>
        <inlineHelpText>Do not use this field</inlineHelpText>
        <label>pi_dp_Verification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_uts_New_CIF_Total__c</fullName>
        <description>Price Information: New CIF Total</description>
        <inlineHelpText>Price Information: New CIF Total</inlineHelpText>
        <label>PIU: New CIF Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_New_CIF_Upcharge__c</fullName>
        <description>Price Information: New CIF Upcharge</description>
        <inlineHelpText>Price Information: New CIF Upcharge</inlineHelpText>
        <label>PIU: New CIF Upcharge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_New_Whse_Total__c</fullName>
        <description>Price Information: Warehouse Total Price</description>
        <inlineHelpText>Price Information: Warehouse Total Price</inlineHelpText>
        <label>PIU: New Warehouse Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_New_Whse_Upcharge__c</fullName>
        <description>Price Information: Warehouse Upcharge amount</description>
        <inlineHelpText>Price Information: Warehouse Upcharge amount</inlineHelpText>
        <label>PIU: New Warehouse Upcharge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_Old_CIF_Total__c</fullName>
        <description>Price Information: Old CIF Total</description>
        <formula>pi_uts_New_CIF_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Old CIF Total</inlineHelpText>
        <label>PIU: Old CIF Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_Old_CIF_Upcharge__c</fullName>
        <description>Price Information: Old CIF Upcharge</description>
        <formula>pi_uts_New_CIF_Upcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Old CIF Upcharge</inlineHelpText>
        <label>PIU: Old CIF Upcharge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_Old_Whse_Total__c</fullName>
        <description>Price Information: Old Warehouse Total</description>
        <formula>pi_uts_New_Whse_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Old Warehouse Total</inlineHelpText>
        <label>PIU: Old Warehouse Upcharge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pi_uts_Old_Whse_Upcharge__c</fullName>
        <description>Price Information: Old Warehouse Upcharge</description>
        <formula>pi_uts_New_Whse_Upcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Information: Old Warehouse Upcharge</inlineHelpText>
        <label>PIU: Old Warehouse Upcharge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xx_Base_Unit_Volume__c</fullName>
        <label>xx_Base Unit Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xx_Base_Units_per_Case__c</fullName>
        <label>xx Base Units per Case</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xx_Category__c</fullName>
        <label>xx_Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WINE</fullName>
                </value>
                <value>
                    <fullName>SPIRITS</fullName>
                    <label>Spirits</label>
                </value>
                <value>
                    <fullName>NON-ALCOHOLIC BEVERAGES</fullName>
                </value>
                <value>
                    <fullName>SAKE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>